[tool.poetry]
name = "trivia"
version = "0.1.0"
description = "TBD"
authors = ["Stefanos Georgakis <s_georgakis@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "0.20.0"
tornado = "^6.1"
py-healthcheck = "^1.10.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "22.6.0"
pytest = "7.1.2"

[tool.poetry.scripts]
http_server = "server:start_http_server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
